// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messages router > /messages/old > GET sends opened messages in order 1`] = `
[
  {
    "date": "2025-03-18T13:08:38.024Z",
    "id": "a681feb7-7746-48ad-990c-7ed57a7ba4bc",
    "message": "0. message",
    "opened": true,
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:39.024Z",
    "id": "00d9fbff-7cb1-4d04-a19e-5dfad158eb5d",
    "message": "1. message",
    "opened": true,
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:40.024Z",
    "id": "aea1b98c-970f-4d51-9929-fe254e2c7c2e",
    "message": "2. message",
    "opened": true,
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:41.024Z",
    "id": "888aa843-fa63-485f-b625-38574dbb5e53",
    "message": "3. message",
    "opened": true,
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:42.024Z",
    "id": "6a511b2b-9895-4769-88db-a2ec5c79392a",
    "message": "4. message",
    "opened": true,
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
]
`;

exports[`messages router > GET sends an message to an user 1`] = `
[
  {
    "date": "2025-03-18T13:08:43.024Z",
    "message": "Some random message",
  },
]
`;

exports[`messages router > GET sends messages based on clients timestamp not request timestamp 1`] = `
[
  {
    "date": "2025-03-18T13:08:33.024Z",
    "message": "First message that arrived later to the server (delayed 10 seconds)",
  },
  {
    "date": "2025-03-18T13:08:38.024Z",
    "message": "Second message that arrived to server first (delayed 5 seconds)",
  },
]
`;

exports[`messages router > POST checks for new messages from receiver between requests 1`] = `
[
  {
    "date": "2025-03-18T13:08:43.024Z",
    "message": "Meantime message",
  },
]
`;

exports[`messages router > POST sends 400 if any of necessary body props are missing 1`] = `
{
  "error": "Missing body property/ies: sender",
}
`;
